css struture completed

--- a/index.html
+++ b/index.html
@@ -14,32 +14,36 @@
 
   <div class="container">
     <div class="description">
-      <h1>Learn to code by watching others</h1>
-      <p>
+      <h1 class="description__title">Learn to code by watching others</h1>
+      <p class="description__paragraph">
         See how experienced developers solve problems in real-time. Watching scripted tutorials is great,
         but understanding how developers think is invaluable.
       </p>
     </div>
 
-    <div class="singup">
+    <div class="signup">
 
-      <button class="signup_buy">Try it free 7 days then $20/mo. thereafter</button>
+      <button class="signup__buy"><strong>Try it free 7 days</strong> then $20/mo. thereafter</button>
 
-      <form action="" class="signup_form">
-        <input type="text" placeholder="First Name"></input>
-        <input type="text" placeholder="LastName"></input>
-        <input type="email" placeholder="Email Address"></input>
-        <input type="password"></input>
-        <button class="buy-trial">Claim your free trial</button>
-        By clicking the button, you are agreeing to our <span>Terms and Services</span>
-      </form>
+
+        <div class="signup__container">
+          <form action="" class="signup__form">
+            <input class="form__input" type="text" placeholder="First Name"></input>
+            <input class="form__input" type="text" placeholder="LastName"></input>
+            <input class="form__input" type="email" placeholder="Email Address"></input>
+            <input class="form__input" type="password" placeholder="password"></input>
+            <button class="buy-trial">Claim your free trial</button>
+          </form>
+          <div class="warning">By clicking the button, you are agreeing to our <span class="warning_terms">Terms and Services</span></div>
+        </div>
+      </div>
     </div>
   </div>
   
   <footer>
     <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="__blank">Frontend Mentor</a>. 
+      Coded by <a href="https://github.com/caiomontenegro" target="__blank">Caio Montenegro</a>.
     </p>
   </footer>
 </body>
