Js struture completed

--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
 
         <div class="signup__container">
           <form action="" class="signup__form">
-            <input class="form__input" type="text" placeholder="First Name"></input>
-            <input class="form__input" type="text" placeholder="Last Name"></input>
-            <input class="form__input" type="email" placeholder="Email Address"></input>
-            <input class="form__input" type="password" placeholder="password"></input>
-            <button class="buy-trial">Claim your free trial</button>
+            <input class="form__input js-input js-fName" type="text" placeholder="First Name"></input>
+            <input class="form__input js-input js-lName" type="text" placeholder="Last Name"></input>
+            <input class="form__input js-input js-email" type="email" placeholder="Email Address"></input>
+            <input class="form__input js-input js-password" type="password" placeholder="password"></input>
+            <input type="submit" class="buy-trial js-login" value="Claim your free trial">
           </form>
           <div class="warning">By clicking the button, you are agreeing to our <span class="warning_terms">Terms and Services</span></div>
         </div>
@@ -46,5 +46,7 @@
       Coded by <a href="https://github.com/caiomontenegro" target="__blank">Caio Montenegro</a>.
     </p>
   </footer>
+  <script src="scripts/script.js">
+  </script>
 </body>
 </html>
