Rules for e-mail updated

--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
           <form action="" class="signup__form">
             <input class="form__input js-input js-fName" type="text" placeholder="First Name">
             </input>
-            <em class="empty-message js-empty-message" >First name cannot be empty</em>
+            <em class="empty-message js-empty-message" ></em>
             <input class="form__input js-input js-lName" type="text" placeholder="Last Name"></input>
-            <em class="empty-message js-empty-message" >Last Name cannot be empty</em>
+            <em class="empty-message js-empty-message" ></em>
             <input class="form__input js-input js-email" type="email" placeholder="Email Address"></input>
-            <em class="empty-message js-empty-message" >Looks like this is not an e-mail</em>
+            <em class="empty-message js-empty-message" ></em>
             <input class="form__input js-input js-password" type="password" placeholder="password"></input>
-            <em class="empty-message js-empty-message" >passowrd cannot be empty</em>
+            <em class="empty-message js-empty-message" ></em>
             <input type="submit" class="buy-trial js-login" value="Claim your free trial">
           </form>
           <div class="warning">By clicking the button, you are agreeing to our <span class="warning_terms">Terms and Services</span></div>
